a little performance speedup
david@dev-davidwork:~/working/github/lz4$ ./lz4 -b1 tags
 1#tags             :    104872 ->     30016 (28.62%),  134.9 MB/s ,  508.4 MB/s
david@dev-davidwork:~/working/github/lz4$ ./lz4_2 -b1 tags
 1#tags             :    104872 ->     30016 (28.62%),  139.3 MB/s ,  508.6 MB/s
david@dev-davidwork:~/working/github/lz4$ ./lz4_2 -b1 tags
 1#tags             :    104872 ->     30016 (28.62%),  139.4 MB/s ,  507.8 MB/s
david@dev-davidwork:~/working/github/lz4$ ./lz4 -b1 tags
 1#tags             :    104872 ->     30016 (28.62%),  134.2 MB/s ,  507.5 MB/s

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -40,11 +40,12 @@ LIBVER_MINOR := $(shell echo $(LIBVER_MINOR_SCRIPT))
 LIBVER_PATCH := $(shell echo $(LIBVER_PATCH_SCRIPT))
 LIBVER := $(shell echo $(LIBVER_SCRIPT))
 
+#CC=icc
 
 DESTDIR?=
 PREFIX ?= /usr/local
 CPPFLAGS= -DXXH_NAMESPACE=LZ4_
-CFLAGS ?= -O3
+CFLAGS ?= -O3 -mavx2
 CFLAGS += -Wall -Wextra -Wundef -Wshadow -Wcast-align -Wcast-qual -Wstrict-prototypes
 FLAGS   = $(CPPFLAGS) $(CFLAGS) $(LDFLAGS)
 
@@ -71,14 +72,14 @@ default: liblz4
 all: liblz4
 
 liblz4: *.c
-	@echo compiling static library
-	@$(CC) $(FLAGS) -c $^
-	@$(AR) rcs $@.a *.o
-	@echo compiling dynamic library $(LIBVER)
-	@$(CC) $(FLAGS) -shared $^ -fPIC $(SONAME_FLAGS) -o $@.$(SHARED_EXT_VER)
-	@echo creating versioned links
-	@ln -sf $@.$(SHARED_EXT_VER) $@.$(SHARED_EXT_MAJOR)
-	@ln -sf $@.$(SHARED_EXT_VER) $@.$(SHARED_EXT)
+	echo compiling static library
+	$(CC) $(FLAGS) -c $^
+	$(AR) rcs $@.a *.o
+	echo compiling dynamic library $(LIBVER)
+	$(CC) $(FLAGS) -shared $^ -fPIC $(SONAME_FLAGS) -o $@.$(SHARED_EXT_VER)
+	echo creating versioned links
+	ln -sf $@.$(SHARED_EXT_VER) $@.$(SHARED_EXT_MAJOR)
+	ln -sf $@.$(SHARED_EXT_VER) $@.$(SHARED_EXT)
 
 clean:
 	@$(RM) -f core *.o *.a *.$(SHARED_EXT) *.$(SHARED_EXT).* liblz4.pc
